Very basic login against the platform functioning.

--- a/apis-authorization-server-war/pom.xml
+++ b/apis-authorization-server-war/pom.xml
@@ -143,8 +143,14 @@
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
       <version>4.2</version>
+
       <classifier>tests</classifier>
-      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>4.2</version>
     </dependency>
 
     <dependency>
