--- a/apis-authorization-server-war/src/test/resources/apis.application.properties
+++ b/apis-authorization-server-war/src/test/resources/apis.application.properties
@@ -15,21 +15,21 @@
 #
 
 # The database settings 
-jdbc.driverClassName=org.hsqldb.jdbcDriver
-jdbc.url=jdbc:hsqldb:file:target/db;shutdown=true;hsqldb.lock_file=false
-jdbc.username=sa
-jdbc.password=
+#jdbc.driverClassName=org.hsqldb.jdbcDriver
+#jdbc.url=jdbc:hsqldb:file:target/db;shutdown=true;hsqldb.lock_file=false
+#jdbc.username=sa
+#jdbc.password=
 
 # For running against mySQL
-#jdbc.driverClassName=com.mysql.jdbc.Driver
-#jdbc.url=jdbc:mysql://localhost:3306/apis
-#jdbc.username=apis
-#jdbc.password=apis
+jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/apis
+jdbc.username=apis
+jdbc.password=apis
 
 # Either db/migration/mysql or db/migration/hsqldb or your custom implementation (e.g. postgres)
 # This can be a comma seperated list to support multiple locations
-flyway.migrations.location=db/migration/hsqldb, db/migration/hsqldb_content
-#flyway.migrations.location=db/migration/mysql
+#flyway.migrations.location=db/migration/hsqldb, db/migration/hsqldb_content
+flyway.migrations.location=db/migration/mysql, db/migration/mysql_content
 
 
 
@@ -37,7 +37,8 @@ flyway.migrations.location=db/migration/hsqldb, db/migration/hsqldb_content
 #authenticatorClass=org.surfnet.oaaas.authentication.FormLoginAuthenticator
 #authenticatorClass=org.surfnet.oaaas.noop.NoopAdminAuthenticator
 #authenticatorClass=org.surfnet.oaaas.noop.NoopAuthenticator
-authenticatorClass=org.surfnet.oaaas.conext.SAMLAuthenticator
+#authenticatorClass=org.surfnet.oaaas.conext.SAMLAuthenticator
+authenticatorClass=com.utest.apis.PlatformLoginAuthenticator
 
 # The user consent module
 userConsentHandlerClass=org.surfnet.oaaas.consent.FormUserConsentHandler
@@ -48,3 +49,5 @@ adminService.tokenVerificationUrl=http://localhost:8080/v1/tokeninfo
 adminService.resourceServerKey=authorization-server-admin
 adminService.resourceServerSecret=cafebabe-cafe-babe-cafe-babecafebabe
 adminService.jsonTypeInfoIncluded=false
+
+platformRestURL=https://my.utest.com/platform/services/v4/rest/auth/login
