Fixed some errors in JK configuration and structure of dist bundle

--- a/utest-apis-dist/pom.xml
+++ b/utest-apis-dist/pom.xml
@@ -29,7 +29,8 @@
 		    </descriptors>
           	    <outputDirectory>target</outputDirectory>
           	    <workDirectory>target/assembly</workDirectory>
-        	</configuration>
+		    <appendAssemblyId>false</appendAssemblyId>
+		</configuration>
         	<executions>
           	    <execution>
             		<id>assembly</id> 
