Bug fixes, migration for voltrondev

--- a/utest-apis-dist/src/main/resources/cloudformation/apis.template
+++ b/utest-apis-dist/src/main/resources/cloudformation/apis.template
@@ -62,7 +62,8 @@
 
 	"DBSnapshotIdentifier" : {
 	    "Description" : "Snapshot for configuring the initial database",
-	    "Type" : "String"
+	    "Type" : "String",
+	    "Default" : "apis-default"
 	},
 
 	"DBName" : {
