Changed finalName of utest-apis-dist assembly

--- a/utest-apis-dist/pom.xml
+++ b/utest-apis-dist/pom.xml
@@ -29,6 +29,7 @@
 		    </descriptors>
           	    <outputDirectory>target</outputDirectory>
           	    <workDirectory>target/assembly</workDirectory>
+		    <finalName>${project.name}</finalName>
 		    <appendAssemblyId>false</appendAssemblyId>
 		</configuration>
         	<executions>
