--- a/apis-authorization-server-war/src/test/resources/apis.application.properties
+++ b/apis-authorization-server-war/src/test/resources/apis.application.properties
@@ -15,16 +15,16 @@
 #
 
 # The database settings 
-#jdbc.driverClassName=org.hsqldb.jdbcDriver
-#jdbc.url=jdbc:hsqldb:file:target/db;shutdown=true;hsqldb.lock_file=false
-#jdbc.username=sa
-#jdbc.password=
+jdbc.driverClassName=org.hsqldb.jdbcDriver
+jdbc.url=jdbc:hsqldb:file:target/db;shutdown=true;hsqldb.lock_file=false
+jdbc.username=sa
+jdbc.password=
 
 # For running against mySQL
-jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/apis
-jdbc.username=apis
-jdbc.password=apis
+#jdbc.driverClassName=com.mysql.jdbc.Driver
+#jdbc.url=jdbc:mysql://localhost:3306/apis
+#jdbc.username=apis
+#jdbc.password=apis
 
 # Either db/migration/mysql or db/migration/hsqldb or your custom implementation (e.g. postgres)
 # This can be a comma seperated list to support multiple locations
